--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTtnWJxlTC1sPy23kB5BoS",
+      "authorship_tag": "ABX9TyPAgMwi6VZhmSvLIcDTm+m5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,7 +155,7 @@
         "colab_type": "text"
       },
       "source": [
-        "As a subset of Machine learning, Deep Learning utilizes neural networks, or set of algorithms designed to recognize certain patterns. DL attemps to map it's inputs to outputs and finds a correlation in the process of learning; Deep also refers to the number of layers in a neural network.\n",
+        "As a subset of Machine learning, Deep Learning utilizes neural networks, or set of algorithms designed to recognize certain patterns. DL attemps to map its inputs to outputs and finds a correlation in the process of learning; Deep also refers to the number of layers in a neural network.\n",
         "\n",
         "\n",
         "*   \"a field of study that gives computers the ability to learn without being explicitly programmed\" - Arthur Samuel\n",
@@ -275,7 +275,7 @@
         "colab_type": "text"
       },
       "source": [
-        "A gradient descent is a *optimization* algorithm when training a model. Assuming the loss function of a model to be convex and has only one minimum,\n",
+        "A gradient descent is an *optimization* algorithm when training a model. Assuming the loss function of a model to be convex and has only one minimum,\n",
         "calculating the loss function for all parameter values is inefficient for finding it. \n",
         "\n",
         "Gradient descent picks a starting value and calculates the loss function and decides which why is \"warmer\" or \"colder\" depending on the increase of the loss function. The algorithm uses a learning rate to decide how far to take a step to the next point; Eventually it converges upon a minimum.\n",
@@ -283,10 +283,10 @@
         "Types of gradient descent mainly are separated by the amount of data used:\n",
         "\n",
         "**Batch Gradient Descent:**\n",
-        "The standard original model that calcuates the error only after all examples have been evaluated. The batch size is the size of the training set.\n",
+        "The standard original model that calculates the error only after all examples have been evaluated. The batch size is the size of the training set.\n",
         "\n",
         "\n",
-        "**Stochastic Gradient Desecent (SGD):**\n",
+        "**Stochastic Gradient Descent (SGD):**\n",
         "\n",
         "SGD updates the parameters after training each example 1 by 1. The batch size is one.\n",
         "\n",
@@ -312,7 +312,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##3. Building a Model"
+        "#3. Building a Model"
       ]
     }
   ]
