--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPAgMwi6VZhmSvLIcDTm+m5",
+      "authorship_tag": "ABX9TyPok9r1YP2HTk+l9yV+z+7j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# Homework 5"
+        "# Homework 5\n",
+        "Summarize and describe the different concepts/methods/algorithms that you have learned in this course.\n",
+        "\n"
       ]
     },
     {
@@ -43,7 +45,8 @@
       },
       "source": [
         "#1. General Concepts\n",
-        "Sources found here at: https://pathmind.com/wiki/ai-vs-machine-learning-vs-deep-learning"
+        "\n",
+        "\n"
       ]
     },
     {
@@ -313,6 +316,110 @@
       },
       "source": [
         "#3. Building a Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HLvmh0uAOcuv",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Convolutional Neutral Networks (Convnets)\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PCW8wT5xRWKS",
+        "colab_type": "text"
+      },
+      "source": [
+        "Convolutional neutral network is a deep learning algorithm and is also similar to regular neutral networks, in that they recieve an input, transform it using hidden layers, and the last layer is called the output layer. Convnet input consists of images and their architecture are focused on performing a better fitting to the image dataset.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dydlVtTTObr7",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Structure of Convnets"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FoODKqCDSf_v",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Convolutional Layers"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "awOqhX8wUBTR",
+        "colab_type": "text"
+      },
+      "source": [
+        "The convolution layers extracts high-level features from the input image;  To reduces large dimensions of matrices while retaining features for good predictions. In the case that the dimensions of the output is reduced because of the kernal, a Same padding or Valid padding can be applied to offset this. \n",
+        "\n",
+        "Homework 4: Question 1 is a perfect example of convolution."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BvGHVS7kSmz7",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Pooling layers\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TMEmnbtKVuJU",
+        "colab_type": "text"
+      },
+      "source": [
+        "The pooling layers attempts to reduce the spaital size from the previous feature. The two types of pooling are Max Pooling and Average Pooling. Max Pooling returns the maximum value of the positions covered by the kernal and average pooling returns the average of all the values.\n",
+        "\n",
+        "\n",
+        "Homework 4: Question 2 deals with maxpooling as a good example "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jIFELZA7SnI5",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Fully-Connected layers"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TGDGaTyDObch",
+        "colab_type": "text"
+      },
+      "source": [
+        "Sources found here at: \n",
+        "\n",
+        "https://pathmind.com/wiki/ai-vs-machine-learning-vs-deep-learning\n",
+        "\n",
+        "https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53\n",
+        "\n",
+        "https://cs231n.github.io/convolutional-networks/"
       ]
     }
   ]
