--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPok9r1YP2HTk+l9yV+z+7j",
+      "authorship_tag": "ABX9TyP1dhIXCGiFlHxNQnXcgX0r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -325,7 +325,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##Convolutional Neutral Networks (Convnets)\n",
+        "##Convolutional Neural Networks (Convnets)\n",
         "\n",
         "\n",
         "\n"
@@ -338,7 +338,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Convolutional neutral network is a deep learning algorithm and is also similar to regular neutral networks, in that they recieve an input, transform it using hidden layers, and the last layer is called the output layer. Convnet input consists of images and their architecture are focused on performing a better fitting to the image dataset.\n"
+        "Convolutional neural network is a deep learning algorithm and is also similar to regular neutral networks, in that they receive an input, transform it using hidden layers, and the last layer is called the output layer. Convnet input consists of images and their architecture are more focused on performing a better fitting to the image dataset than regular neutral networks.\n"
       ]
     },
     {
@@ -368,7 +368,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The convolution layers extracts high-level features from the input image;  To reduces large dimensions of matrices while retaining features for good predictions. In the case that the dimensions of the output is reduced because of the kernal, a Same padding or Valid padding can be applied to offset this. \n",
+        "The convolution layers extract high-level features from the input image;  To reduce large matrices into a form that is easier to process while retaining features for good predictions. In the case that the dimensions of the output is reduced because of the kernel, a Same padding or Valid padding can be applied to offset this. \n",
         "\n",
         "Homework 4: Question 1 is a perfect example of convolution."
       ]
@@ -390,7 +390,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The pooling layers attempts to reduce the spaital size from the previous feature. The two types of pooling are Max Pooling and Average Pooling. Max Pooling returns the maximum value of the positions covered by the kernal and average pooling returns the average of all the values.\n",
+        "The pooling layers attempts to reduce the spatial size from the previous feature; It is similar to the convolution process. The two types of pooling are Max Pooling and Average Pooling that is applied with the kernel. Max Pooling returns the maximum value of the positions covered by the kernel and average pooling returns the average of all the values.\n",
         "\n",
         "\n",
         "Homework 4: Question 2 deals with maxpooling as a good example "
@@ -403,7 +403,41 @@
         "colab_type": "text"
       },
       "source": [
-        "###Fully-Connected layers"
+        "###Fully-Connected layers\n",
+        "\n",
+        "The classification layer, where in a series of epochs/ dense layers, the information is classified according to their features.\n",
+        "\n",
+        "Homework 4: Question 3 deals with Convolutional neural network architecture using VGGNet and changing it to other algorithms such as ResNet or Xception"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xkVg10XweKR5",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Comping the Model\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T4NZa0DqeMXW",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Loss Function (objective function)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xHdIkFJfeQSX",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Optimizer"
       ]
     },
     {
