--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP1dhIXCGiFlHxNQnXcgX0r",
+      "authorship_tag": "ABX9TyNTSAw2dTlFj/f3ujEjtOnq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -417,7 +417,10 @@
         "colab_type": "text"
       },
       "source": [
-        "#Comping the Model\n"
+        "#4. Comping the Model\n",
+        "\n",
+        "Once a network architecture is defined, 2 things still need to be accomplished;\n",
+        "They are the Loss function and Optimizer."
       ]
     },
     {
