--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTSAw2dTlFj/f3ujEjtOnq",
+      "authorship_tag": "ABX9TyMk+w3jGgWCa4mKGpxBN/On",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -370,7 +370,7 @@
       "source": [
         "The convolution layers extract high-level features from the input image;  To reduce large matrices into a form that is easier to process while retaining features for good predictions. In the case that the dimensions of the output is reduced because of the kernel, a Same padding or Valid padding can be applied to offset this. \n",
         "\n",
-        "Homework 4: Question 1 is a perfect example of convolution."
+        "Homework 4: Question 1 is a perfect example of convolution. [Here](https://github.com/Michael-Siri/AI-CAP4630/blob/master/HW_4/HW4Question1.ipynb)"
       ]
     },
     {
@@ -393,7 +393,7 @@
         "The pooling layers attempts to reduce the spatial size from the previous feature; It is similar to the convolution process. The two types of pooling are Max Pooling and Average Pooling that is applied with the kernel. Max Pooling returns the maximum value of the positions covered by the kernel and average pooling returns the average of all the values.\n",
         "\n",
         "\n",
-        "Homework 4: Question 2 deals with maxpooling as a good example "
+        "Homework 4: Question 2 deals with maxpooling as a good example. [Here](https://github.com/Michael-Siri/AI-CAP4630/blob/master/HW_4/Homework4Question2.ipynb)"
       ]
     },
     {
@@ -407,7 +407,7 @@
         "\n",
         "The classification layer, where in a series of epochs/ dense layers, the information is classified according to their features.\n",
         "\n",
-        "Homework 4: Question 3 deals with Convolutional neural network architecture using VGGNet and changing it to other algorithms such as ResNet or Xception"
+        "Homework 4: Question 3 deals with Convolutional neural network architecture using VGGNet and changing it to other algorithms such as ResNet or Xception. [Here](https://github.com/Michael-Siri/AI-CAP4630/blob/master/HW_4/Homework4Question3part1.ipynb)"
       ]
     },
     {
@@ -446,6 +446,56 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Y0btAX_NhHpx",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Learning Rate\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VUKRlNnBhW_b",
+        "colab_type": "text"
+      },
+      "source": [
+        "#5. Training a Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UEOA6TUohZiV",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Overfitting"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RTy5xDgohb37",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Underfitting"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tKYNRL2qhdyW",
+        "colab_type": "text"
+      },
+      "source": [
+        "#6. Finetuning a pretrained model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "TGDGaTyDObch",
         "colab_type": "text"
       },
@@ -456,7 +506,9 @@
         "\n",
         "https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53\n",
         "\n",
-        "https://cs231n.github.io/convolutional-networks/"
+        "https://cs231n.github.io/convolutional-networks/\n",
+        "\n",
+        "https://machinelearningmastery.com/loss-and-loss-functions-for-training-deep-learning-neural-networks/"
       ]
     }
   ]
