--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMk+w3jGgWCa4mKGpxBN/On",
+      "authorship_tag": "ABX9TyOdx5eJffXzCaAASV336cwM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -262,6 +262,21 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nTFfgHIF3BAh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def sigmoid(x):\n",
+        "  res = 1/(1+np.exp(x))\n",
+        "  return res"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "hWY7KOIx3pop",
@@ -430,8 +445,35 @@
         "colab_type": "text"
       },
       "source": [
-        "##Loss Function (objective function)"
+        "##Loss Function (objective function)\n",
+        "A loss function generates the error of a single training example, and is typically used for minimizing cost with an optimization method such as gradient descent; It is also used as a measure of success for the current task.\n",
+        "\n",
+        "The loss functions learned about in this course are:\n",
+        "\n",
+        "**Squared Error Loss**: The square difference between actual and predicted values\n",
+        "\n",
+        "$L = (y - f(x))^2$\n",
+        "\n",
+        "**Binary Cross Entrophy Loss:** also named Sigmoid Cross-Entropy loss\n",
+        "\n",
+        "$L = (Y)(-log(Y_{pred})) + (1-Y)(-log(1-Y_{pred}) $\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CK959B3q2ZRj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def bce(y, a):\n",
+        "  res = -y*np.log10(a)-(1-y)*np.log10(1-a)\n",
+        "  return res\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -440,7 +482,20 @@
         "colab_type": "text"
       },
       "source": [
-        "##Optimizer"
+        "##Optimizer\n",
+        "Optimizers react to the loss function and update the model in response, attempting to efficiently and accurately make a prediction. We've already discussed multiple optimizers in Gradient & Gradient Descent on Section 2 Basic concepts. Nevertheless, there are multiple types of optimizers such as:\n",
+        "\n",
+        "*   Adagrad\n",
+        "*   RMSprop\n",
+        "*   Adadelta\n",
+        "*   Adam\n",
+        "*   Adamax\n",
+        "*   Nadam\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
