--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOdx5eJffXzCaAASV336cwM",
+      "authorship_tag": "ABX9TyNGxYyGAKuZzV15Mj4zjiyG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -505,7 +505,10 @@
         "colab_type": "text"
       },
       "source": [
-        "##Learning Rate\n"
+        "##Learning Rate\n",
+        "The learning rate controls how quickly a neural network learns a problem. The step size that a model applies to each step of the problem is the learning rate and is also a hyperparameter for your nueral network.\n",
+        "\n",
+        "A good learning rate is dependent on your training set and is usually covered via trial and error. The range of learning rates can vary between 1.0 to 10^-6.\n"
       ]
     },
     {
@@ -563,7 +566,9 @@
         "\n",
         "https://cs231n.github.io/convolutional-networks/\n",
         "\n",
-        "https://machinelearningmastery.com/loss-and-loss-functions-for-training-deep-learning-neural-networks/"
+        "https://machinelearningmastery.com/loss-and-loss-functions-for-training-deep-learning-neural-networks/\n",
+        "\n",
+        "https://machinelearningmastery.com/learning-rate-for-deep-learning-neural-networks/"
       ]
     }
   ]
