--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNGxYyGAKuZzV15Mj4zjiyG",
+      "authorship_tag": "ABX9TyPnN0pHm7ROAV94E1aZBKcv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -518,7 +518,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#5. Training a Model"
+        "#5. Training a Model\n",
+        "There are a few problems that may impact the accuracy of a machine learning model. A model may be overfit, underfit, or balanced; The training and test set split which is taught in this class is to avoid these errors and adjust the models adequately."
       ]
     },
     {
@@ -528,7 +529,11 @@
         "colab_type": "text"
       },
       "source": [
-        "## Overfitting"
+        "## Overfitting\n",
+        "\n",
+        "Overfitting is when your model performs exceptionally well to your training data but not on the testing data or any new information. This is usually because the model is accepts irrevelent information as part of it's algorithm or the \"noise\" of the data. If the data fits the model too well with low bias and high variance, new data will not be categorized completely.\n",
+        "\n",
+        "The fixes for this may be both removing features or training with *more* data. In the off chance where you capture a specific set of data, more samples may normalize your data. Removing features that are less important will remove more noise from a redundant model."
       ]
     },
     {
@@ -538,7 +543,18 @@
         "colab_type": "text"
       },
       "source": [
-        "##Underfitting"
+        "##Underfitting\n",
+        "\n",
+        "Underfitting occurs when the model performs poorly on the training set; It is unable to create a proper prediction based on the current data and there may be a few causes for this.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   The wrong type of data, linear model with nonlinear data\n",
+        "*   Not enough data to create an accurate model\n",
+        "*   The model is too simplistic and doesn't have enough features\n",
+        "\n",
+        "Adjusting the model by adding more features is a solution to an underfitted training data."
       ]
     },
     {
@@ -568,7 +584,9 @@
         "\n",
         "https://machinelearningmastery.com/loss-and-loss-functions-for-training-deep-learning-neural-networks/\n",
         "\n",
-        "https://machinelearningmastery.com/learning-rate-for-deep-learning-neural-networks/"
+        "https://machinelearningmastery.com/learning-rate-for-deep-learning-neural-networks/\n",
+        "\n",
+        "https://medium.com/swlh/overfitting-vs-underfitting-d742b4ffac57"
       ]
     }
   ]
