--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPnN0pHm7ROAV94E1aZBKcv",
+      "authorship_tag": "ABX9TyPkpohAsGYq4QHfoI+C+8ai",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -353,7 +353,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Convolutional neural network is a deep learning algorithm and is also similar to regular neutral networks, in that they receive an input, transform it using hidden layers, and the last layer is called the output layer. Convnet input consists of images and their architecture are more focused on performing a better fitting to the image dataset than regular neutral networks.\n"
+        "Convolutional neural network is a deep learning algorithm and is also similar to regular neural networks, in that they receive an input, transform it using hidden layers, and the last layer is called the output layer. Convnet input consists of images and their architecture are more focused on performing a better fitting to the image dataset than regular neural networks.\n"
       ]
     },
     {
@@ -454,7 +454,7 @@
         "\n",
         "$L = (y - f(x))^2$\n",
         "\n",
-        "**Binary Cross Entrophy Loss:** also named Sigmoid Cross-Entropy loss\n",
+        "**Binary Cross Entropy Loss:** also named Sigmoid Cross-Entropy loss\n",
         "\n",
         "$L = (Y)(-log(Y_{pred})) + (1-Y)(-log(1-Y_{pred}) $\n",
         "\n"
@@ -506,7 +506,7 @@
       },
       "source": [
         "##Learning Rate\n",
-        "The learning rate controls how quickly a neural network learns a problem. The step size that a model applies to each step of the problem is the learning rate and is also a hyperparameter for your nueral network.\n",
+        "The learning rate controls how quickly a neural network learns a problem. The step size that a model applies to each step of the problem is the learning rate and is also a hyperparameter for your neural network.\n",
         "\n",
         "A good learning rate is dependent on your training set and is usually covered via trial and error. The range of learning rates can vary between 1.0 to 10^-6.\n"
       ]
@@ -531,7 +531,7 @@
       "source": [
         "## Overfitting\n",
         "\n",
-        "Overfitting is when your model performs exceptionally well to your training data but not on the testing data or any new information. This is usually because the model is accepts irrevelent information as part of it's algorithm or the \"noise\" of the data. If the data fits the model too well with low bias and high variance, new data will not be categorized completely.\n",
+        "Overfitting is when your model performs exceptionally well to your training data but not on the testing data or any new information. This is usually because the model accepts irrevelant information as part of it's algorithm or the \"noise\" of the data. If the data fits the model too well with low bias and high variance, new data will not be categorized completely.\n",
         "\n",
         "The fixes for this may be both removing features or training with *more* data. In the off chance where you capture a specific set of data, more samples may normalize your data. Removing features that are less important will remove more noise from a redundant model."
       ]
