--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOppL0Y3yFej26QrhSHCmpc",
+      "authorship_tag": "ABX9TyOP73PkgIwJ4VTDmm5tGnP6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1010,7 +1010,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Sources found here at (1-2 for each section): \n",
+        "# Sources found here at (1-2 for each section): \n",
+        "\n",
         "\n",
         "1. https://pathmind.com/wiki/ai-vs-machine-learning-vs-deep-learning\n",
         "\n",
